--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,3 +1,8 @@
+<%= link_to 'Previous page', page: @page - 1 %>  <!-- go to previous Page-->
+<%= link_to 'Next Page', page: @page + 1 %>  <!-- go to next page!-->
+<!--  --> 
+
+
 <% @statuses.each do |s| %>
   <%= div_for s do %>
     <p><%= s.body %></p>
